remove all Java 11 stuff